Legend font update

--- a/dv_index.html
+++ b/dv_index.html
@@ -329,8 +329,8 @@
                     <h4 class = "legend_heading">Heatmap (event count)</h4>
                         <div id="heatbox"></div>
                         <div id="heattext">
-                        <p id= "HeatLeftTag">Low</p>
-                        <p id= "HeatRightTag">High</p>
+                        <p1 id= "HeatLeftTag">Low</p1>
+                        <p1 id= "HeatRightTag">High</p1>
                         </div>
                     </div>
                     
